# osge

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.bat  build.sh  config.hpp  main.cpp
assets/scripts/: engine.framerate.cpp  engine.framerate.hpp
binaries/linux/: libSDL3.so.0.2.24
cmake/: CMakeLists.txt
config/: engine.config.hpp  engine.version.hpp  game.config  game.config.hpp
crypto/: hex.cpp
documentation/: get-started.html
editor/: osge.editor.hpp
environment/: env.console.cpp  env.console.hpp  env.displays.cpp  env.displays.hpp  env.monitors.cpp  env.monitors.hpp  env.resolutions.cpp  env.resolutions.hpp  env.system.cpp  env.system.hpp
game/: game.main.cpp  game.main.hpp
game/assets/shaders/: default.frag  default.vert
game/engine/: engine.framerate.cpp
glfw/: glfw.instance.cpp  glfw.instance.hpp  window.handler.cpp  window.handler.hpp  window.updater.cpp  window.updater.hpp
helpers/: help.files.cpp  help.files.hpp  help.integer.cpp  help.integer.hpp  help.parser.cpp  help.parser.hpp  help.text.format.cpp  help.text.format.hpp  help.time.handler.cpp  help.time.handler.hpp  help.versioning.cpp  help.versioning.hpp
libraries/sdl/: LICENSE.txt
logs/: logs.file.cpp  logs.file.hpp  logs.handler.cpp  logs.handler.hpp  logs.popup.cpp  logs.popup.hpp
opengl/: opengl.run.cpp  opengl.run.hpp
osge/: osge.hpp  run.cpp
osge/input/: sdl3.inputs.actions.cpp  sdl3.inputs.handler.cpp
osge/renderer/opengl/: opengl.run.cpp
osge/utils/: utils.hpp
osge/utils/crypto/: utils.crypto.hpp
osge/utils/files/: binaries.cpp  file.manager.cpp  utils.files.hpp
osge/window/: sdl3.instance.hpp  window.handler.cpp  window.handler.hpp
scripts/batch/: build.bat
sdl/: sdl.instance.cpp  sdl.instance.hpp  window.handler.cpp  window.handler.hpp  window.updater.cpp  window.updater.hpp
sdl3/: sdl3.instance.cpp  window.handler.cpp  window.handler.hpp  window.updater.cpp  window.updater.hpp
sdl3/inputs/: sdl3.inputs.handler.hpp
shaders/: default.frag  default.vert
utils/: tool.files.cpp  tool.files.hpp  tool.integer.cpp  tool.parser.cpp  tool.parser.hpp  tool.text.format.cpp  tool.text.format.hpp  tool.time.handler.cpp  tool.time.handler.hpp  tool.versioning.cpp
utils/cryptography/: aes128_cbc.cpp  base64.cpp
utils/files/: file.manager.cpp  utils.files.hpp
utils/logs/: logs.file.cpp  logs.popup.cpp  utils.logs.hpp
utils/miscellaneous/: integers.cpp
utils/parsers/: config.parser.cpp  utils.parsers.hpp
utils/text/: text.handler.cpp
vulkan/: vulkan.cpp  vulkan.run.cpp  vulkan.run.hpp
vulkan/buffers/: buffer.copy.cpp  buffer.copy.hpp  buffer.index.cpp  buffer.index.hpp  buffers.handler.cpp  buffers.handler.hpp  buffers.memory.cpp  buffers.memory.hpp  command.buffers.cpp  copy.buffer.cpp  frame.buffers.cpp  index.buffer.cpp
vulkan/colors/: color.attachment.cpp  color.attachment.hpp  color.resources.cpp  color.resources.hpp  vulkan.colors.hpp
vulkan/commands/: command.buffer.handler.cpp  command.buffer.handler.hpp  command.buffer.recorder.cpp  command.buffer.recorder.hpp  command.buffers.cpp  command.buffers.hpp  command.pool.cpp  command.pool.hpp
vulkan/core/: validation.layers.cpp  validation.layers.hpp  vulkan.extensions.cpp  vulkan.extensions.hpp  vulkan.instance.cpp  vulkan.instance.hpp  vulkan.surface.cpp  vulkan.surface.hpp
vulkan/depth/: depth.attachments.cpp  depth.attachments.hpp  depth.formats.cpp  depth.formats.hpp  depth.resources.cpp  depth.resources.hpp
vulkan/descriptors/: descriptor.layout.cpp  descriptor.layout.hpp  descriptor.pool.cpp  descriptor.pool.hpp  descriptor.set.layout.cpp  descriptor.set.layout.hpp  descriptor.sets.cpp  descriptor.sets.hpp
vulkan/device/: logical.device.cpp  logical.device.hpp  physical.device.cpp  physical.device.hpp
vulkan/devices/: vulkan.devices.hpp
vulkan/helpers/: image.views.handler.cpp  image.views.handler.hpp  supported.format.cpp  supported.format.hpp
vulkan/images/: image.transitions.cpp  image.transitions.hpp  image.views.handler.cpp  image.views.handler.hpp  images.handler.cpp  images.handler.hpp
vulkan/models/: models.loader.cpp
vulkan/pipeline/: color.attachment.cpp  color.attachment.hpp  graphics.pipeline.cpp  graphics.pipeline.hpp  pipeline.dynamic.state.cpp  pipeline.dynamic.states.cpp  pipeline.dynamic.states.hpp  pipeline.input.assembly.state.cpp  pipeline.input.assembly.state.hpp  pipeline.layout.cpp  pipeline.layout.hpp  pipeline.multisampling.cpp  pipeline.multisampling.hpp  pipeline.rasterization.cpp  pipeline.rasterization.hpp  rect2d.scissor.cpp  rect2d.scissor.hpp  viewport.cpp  viewport.hpp
vulkan/queues/: graphics.queue.cpp  graphics.queue.hpp  present.queue.cpp  present.queue.hpp  queues.handler.cpp  queues.handler.hpp  vulkan.queues.hpp
vulkan/render/: draw.frames.cpp  draw.frames.hpp  framebuffers.handler.cpp  framebuffers.handler.hpp  multisampling.cpp  multisampling.hpp  render.draw.frames.cpp  render.draw.frames.hpp  render.framebuffers.cpp  render.framebuffers.hpp  render.pass.cpp  render.pass.handler.cpp  render.pass.hpp
vulkan/shaders/: shader.modules.cpp  shader.modules.hpp  shader.stages.cpp  shader.stages.hpp
vulkan/swapchain/: swapchain.data.queries.cpp  swapchain.data.queries.hpp  swapchain.data.selection.cpp  swapchain.data.selection.hpp  swapchain.handler.cpp  swapchain.handler.hpp  swapchain.images.cpp  swapchain.images.hpp  swapchain.recreation.cpp  swapchain.recreation.hpp
vulkan/textures/: mitmaps.generator.hpp  texture.image.buffers.cpp  texture.image.buffers.hpp  texture.image.transitions.cpp  texture.image.transitions.hpp  texture.image.views.cpp  texture.images.handler.cpp  texture.images.handler.hpp  texture.images.loader.cpp  texture.images.loader.hpp  texture.sampler.cpp
vulkan/uniform/: uniform.buffer.update.cpp  uniform.buffer.update.hpp  uniform.buffers.cpp  uniform.buffers.hpp
vulkan/utils/: image.views.handler.cpp  image.views.handler.hpp  supported.format.cpp
vulkan/vertex/: vertex.buffer.cpp  vertex.buffer.hpp  vertex.handler.cpp  vertex.handler.hpp  vertex.input.state.cpp  vertex.input.state.hpp
(+85 files in other folders)
